compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_variant_in_clause_guard.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\nimport mod\n\nfn func(arg) {\n  case arg {\n    [x, ..rest] if x == mod .   Variant1 -> 1 + func(rest)\n    [_, ..rest] -> func(rest)\n    [] -> 0\n  }\n}\n"
---
----- BEFORE RENAME
-- mod.gleam
pub type Type { Variant1 Variant2 }

-- app.gleam

import mod

fn func(arg) {
  case arg {
    [x, ..rest] if x == mod .   Variant1 -> 1 + func(rest)
                        ↑▔▔                               
    [_, ..rest] -> func(rest)
    [] -> 0
  }
}


----- AFTER RENAME
-- mod.gleam
pub type Type { Variant1 Variant2 }

-- app.gleam

import mod as module

fn func(arg) {
  case arg {
    [x, ..rest] if x == mod .   Variant1 -> 1 + func(rest)
    [_, ..rest] -> func(rest)
    [] -> 0
  }
}
